--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,8 @@
 /lab05/lab05b
 /lab05/lab05a
-/lab3/lab3
-/lab3/main
+/lab3/3a/lab3
+/lab3/3a/main
+/lab3/3b/main
+/lab3/3b/table
+/lab3/3b/ks1
+/lab3/3b/ks2
