Add 4a 4b with extra tasks

--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,9 @@
+main
 /lab05/lab05b
 /lab05/lab05a
 /lab3/3a/lab3
-/lab3/3a/main
-/lab3/3b/main
-/lab3/3b/table
-/lab3/3b/ks1
-/lab3/3b/ks2
-/lab4/main
+/lab3/3c/table
+/lab3/3c/ks1
+/lab3/3c/ks2
+tree.dot
+tree.png
